tests/negative/parser/fmt/unexpected_end_after_arg.orng
// unexpected_end_after_arg.orng:7:30: error: unexpected end of format string
//     try @print("Hello, {name")
//                             ^
// 
fn main() -> ()!() with core::IO {
    let name = "World"
    try @print("Hello, {name")
    .ok
}